# words

./: LICENSE  meson.build
src/: words.c
